# python-openai-agentic-workflow

./: Makefile  README.md  pyproject.toml
.zed/: settings.json
app/: celery_app.py  main.py
app/modules/content/: method.py  prompt.py  schema.py  tasks.py
app/utils/: openai.py  tavily.py
